[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-linker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]


[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
vault-linker = "vault_linker.cli:main"
